# lisp-interpreter

./: .gitignore  LICENSE  README.md  TODO.md  flake.nix  hie.yaml  lisp-interpreter.cabal  stdlib.lsp
examples/: fizzbuzz.lsp
src/: Builtins.hs  Char.hs  Errors.hs  Eval.hs  Main.hs  Parser.hs  Types.hs  Utils.hs
