cabal-version:      3.0
name:               lisp-interpreter
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Nicole Prindle
maintainer:         nprindle18@gmail.com

-- A copyright notice.
-- copyright:
category:           Language
extra-source-files: CHANGELOG.md

executable lisp-interpreter
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      Eval
      Parser
      Types
      Builtins
      Errors
      Char

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    , base >=4.13.0.0
                      , megaparsec
                      , containers
                      , mtl
                      , transformers
                      , text ^>=1.2.5.0
                      , haskeline
                      , exceptions
                      , case-insensitive
                      , text-show
                      , vector
                      , data-default
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
      -Wall
      -O2
